src/main/helm/conference-frontend/gcloud-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: conference-frontend
  annotations:
    kubernetes.io/ingress.global-static-ip-name: conference-ip
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: conference-frontend
          servicePort: 80
      - path: /api/*
        backend:
          serviceName: conference-backend
          servicePort: 80
